--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,20 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/6.2.4/firebase-app.js"></script>
+
+    <script src="/__/firebase/init.js"></script>
+    <script>
+      const config = {
+        apiKey: "AIzaSyAe-khcZHx2a68Dl2Ahi7HaSq_bifcvrgg",
+        authDomain: "event-calendar-7c807.firebaseapp.com",
+        databaseURL: "https://event-calendar-7c807.firebaseio.com",
+        projectId: "event-calendar-7c807",
+        storageBucket: "",
+        messagingSenderId: "535125482061",
+        appId: "1:535125482061:web:b2f59212678bbe6d"
+      };
+    </script>
   </body>
 </html>
